--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/suhan0694/cs529-hw01/issues"
   },
   "homepage": "https://github.com/suhan0694/cs529-hw01#readme",
-  "dependencies": {
-    "http-server": "^0.12.3"
+  "dependencies": {},
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "prettier": "2.1.2"
   }
 }
